tests/ui/tool-attributes/tool-attributes-shadowing.stderr
error[E0433]: failed to resolve: could not find `skip` in `rustfmt`
  --> $DIR/tool-attributes-shadowing.rs:3:12
   |
LL | #[rustfmt::skip]
   |            ^^^^ could not find `skip` in `rustfmt`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
